--- a/style.css
+++ b/style.css
@@ -2,11 +2,11 @@ body{
     background: hsl(47,88%,63%);
     display: grid;
     place-items: center;
-    height: auto;
+    height: 100vh;
 }
 #blog-div{
-    width: 25rem;
-    height: 35rem;
+    width: 20rem;
+    height: 30rem;
     background: white;
     border-radius: 1rem;
     border: 1px solid black;
@@ -39,12 +39,12 @@ body{
 #h5{
     color: hsl(0,0%,7%);
 }
-#h1{
+#h3{
     font-weight: 1000;
     font-size: 23px;
     transition-duration: 0.2s;
 }
-#h1:hover{
+#h3:hover{
     color: hsl(47,88%,63%);
     cursor: pointer;
 }
